fixed the alignment :)

--- a/public_html/home/style.css
+++ b/public_html/home/style.css
@@ -96,11 +96,13 @@ nav ul li a{
     align-items: center;
     position: relative;
     overflow:hidden;
+    width: fit-content;
 }
 
-.timeAttack{
+.timeAttack, .create-game, .leaderboard{
     display:flex;
     align-items: center;
+    justify-content: center;
 }
 
 .buttons .info-button{
@@ -135,6 +137,12 @@ span{
     align-items: center;
 }
 
+.close-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 input[type=text]{
     width: 100%;
     padding: 15px;
@@ -167,6 +175,9 @@ input[type=text]{
     margin: 10px;
     padding: 5px; 
     font-family: cursive;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 #time-attack-screen.hidden, 
